Battery status was having an issue showing full. I cleaned it up and made it much more simple. I also enabled it by default.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 
+# Clock
 chrono = "0.4.38"
 
-# Uncomment for battery
-# notify-rust = "4.11.0"
-#battery = "0.7.8"
+# Battery
+battery = "0.7.8"
