--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,14 @@
 name = "rustystatus"
 version = "0.1.0"
 edition = "2021"
+authors = ["Droid Coil"]
+repository = "https://github.com/DroidCoil/RustyStatus"
+readme = "README.md"
+license = "MIT"
 
 [dependencies]
 chrono = "0.4.38"
 battery = "0.7.8"
 alsa = "0.9.0"
 sysinfo = "0.30.12"
+anyhow = "1.0"
